LPF-1368 - Initial broken commit of pfla-test merge - 500 status code errors but tests run